// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the IntroSequencePopup component 1`] = `
<Modal
  animationDuration={500}
  blockScroll={true}
  center={false}
  classNames={
    Object {
      "modal": "introSequenceModal",
      "overlay": "introSequenceOverlay",
    }
  }
  classes={
    Object {
      "closeButton": "styles_closeButton__20ID4",
      "closeIcon": "styles_closeIcon__1QwbI",
      "modal": "styles_modal__gNwvD",
      "modalCenter": "styles_modalCenter__L9F2w",
      "overlay": "styles_overlay__CLSq-",
      "transitionEnter": "styles_transitionEnter__3j_-a",
      "transitionEnterActive": "styles_transitionEnterActive___eQs7",
      "transitionExit": "styles_transitionExit__1KmEf",
      "transitionExitActive": "styles_transitionExitActive__1nQXw",
    }
  }
  closeIconSize={28}
  closeIconSvgPath={
    <path
      d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
    />
  }
  closeOnEsc={false}
  closeOnOverlayClick={false}
  container={null}
  focusTrapOptions={Object {}}
  focusTrapped={true}
  onClose={[MockFunction]}
  open={false}
  role="dialog"
  showCloseIcon={false}
  styles={Object {}}
>
  <div
    className="introSequenceContents"
  >
    <div
      className="title"
    >
      <Translate
        tag="span"
        value="clientprops.introSequenceTitle"
      />
    </div>
    <Slider
      arrows={false}
      beforeChange={[Function]}
      className="introSequenceCarousel"
      dots={false}
      infinite={false}
      initialSlide={0}
      slidesToScroll={1}
      slidesToShow={1}
      speed={500}
    >
      <IntroSlidePopup
        key="is0"
        text="text"
      />
      <IntroSlidePopup
        key="is1"
        text="text"
      />
      <IntroSlidePopup
        key="is2"
        text="text"
      />
      <IntroSlidePopup
        key="is3"
        text="text"
      />
      <IntroSlidePopup
        key="is4"
        text="text"
      />
      <IntroSlidePopup
        key="is5"
        text="text"
      />
      <IntroSlidePopup
        key="is6"
        text="text"
      />
      <IntroSlidePopup
        key="is7"
        text="text"
      />
      <IntroSlidePopup
        key="is8"
        text="text"
      />
      <IntroSlidePopup
        key="is9"
        text="text"
      />
      <IntroSlidePopup
        key="is10"
        text="text"
      />
      <IntroSlidePopup
        key="is11"
        text="text"
      />
      <IntroSlidePopup
        key="is12"
        text="text"
      />
    </Slider>
    <div
      className="navButtons"
    >
      <button
        className="backBtn"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="icon"
        />
        <Translate
          tag="span"
          value="clientprops.backBtn"
        />
      </button>
      <button
        className="nextBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.nextBtn"
        />
        <span
          className="icon"
        />
      </button>
    </div>
    <div
      className="continueBtn hidden"
    >
      <button
        onClick={[MockFunction]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.start"
        />
      </button>
    </div>
    <div
      className="skipBtn "
    >
      <button
        onClick={[MockFunction]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.skipBtn"
        />
        <span
          className="icon"
        />
      </button>
    </div>
  </div>
</Modal>
`;

exports[`renders the IntroSequencePopup component with hidden buttons 1`] = `
<Modal
  animationDuration={500}
  blockScroll={true}
  center={false}
  classNames={
    Object {
      "modal": "introSequenceModal",
      "overlay": "introSequenceOverlay",
    }
  }
  classes={
    Object {
      "closeButton": "styles_closeButton__20ID4",
      "closeIcon": "styles_closeIcon__1QwbI",
      "modal": "styles_modal__gNwvD",
      "modalCenter": "styles_modalCenter__L9F2w",
      "overlay": "styles_overlay__CLSq-",
      "transitionEnter": "styles_transitionEnter__3j_-a",
      "transitionEnterActive": "styles_transitionEnterActive___eQs7",
      "transitionExit": "styles_transitionExit__1KmEf",
      "transitionExitActive": "styles_transitionExitActive__1nQXw",
    }
  }
  closeIconSize={28}
  closeIconSvgPath={
    <path
      d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
    />
  }
  closeOnEsc={false}
  closeOnOverlayClick={false}
  container={null}
  focusTrapOptions={Object {}}
  focusTrapped={true}
  onClose={[MockFunction]}
  open={false}
  role="dialog"
  showCloseIcon={false}
  styles={Object {}}
>
  <div
    className="introSequenceContents"
  >
    <div
      className="title"
    >
      <Translate
        tag="span"
        value="clientprops.introSequenceTitle"
      />
    </div>
    <Slider
      arrows={false}
      beforeChange={[Function]}
      className="introSequenceCarousel"
      dots={false}
      infinite={false}
      initialSlide={0}
      slidesToScroll={1}
      slidesToShow={1}
      speed={500}
    >
      <IntroSlidePopup
        key="is0"
        text="text"
      />
      <IntroSlidePopup
        key="is1"
        text="text"
      />
      <IntroSlidePopup
        key="is2"
        text="text"
      />
      <IntroSlidePopup
        key="is3"
        text="text"
      />
      <IntroSlidePopup
        key="is4"
        text="text"
      />
      <IntroSlidePopup
        key="is5"
        text="text"
      />
      <IntroSlidePopup
        key="is6"
        text="text"
      />
      <IntroSlidePopup
        key="is7"
        text="text"
      />
      <IntroSlidePopup
        key="is8"
        text="text"
      />
      <IntroSlidePopup
        key="is9"
        text="text"
      />
      <IntroSlidePopup
        key="is10"
        text="text"
      />
      <IntroSlidePopup
        key="is11"
        text="text"
      />
      <IntroSlidePopup
        key="is12"
        text="text"
      />
    </Slider>
    <div
      className="navButtons"
    >
      <button
        className="backBtn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="icon"
        />
        <Translate
          tag="span"
          value="clientprops.backBtn"
        />
      </button>
      <button
        className="nextBtn"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.nextBtn"
        />
        <span
          className="icon"
        />
      </button>
    </div>
    <div
      className="continueBtn "
    >
      <button
        onClick={[MockFunction]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.start"
        />
      </button>
    </div>
    <div
      className="skipBtn hidden"
    >
      <button
        onClick={[MockFunction]}
        type="button"
      >
        <Translate
          tag="span"
          value="clientprops.skipBtn"
        />
        <span
          className="icon"
        />
      </button>
    </div>
  </div>
</Modal>
`;
